--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   	<groupId>com.sports.frontend</groupId>
   	<artifactId>SportsGestor</artifactId>
   	<version>0.0.1-SNAPSHOT</version>
-  	<packaging>war</packaging>
+  	<packaging>jar</packaging>
   
 	<parent>
 		<groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-	    <version>1.5.3.RELEASE</version>
+	    <version>2.2.0.RELEASE</version>
 	</parent>
 
 	<dependencies>
